--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,20 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-<TextView
-    android:id="@+id/item_Tv_title"
-    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:text="title"
-    android:layout_weight="1"
-    />
-    <TextView
-        android:id="@+id/item_Tv_content"
-        android:layout_width="0dp"
+    android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="content"
-        android:layout_weight="5"/>
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="title:"
+            />
+        <TextView
+            android:id="@+id/item_Tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="title"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Content:"
+            />
+        <TextView
+            android:id="@+id/item_Tv_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="content"
+            />
+    </LinearLayout>
+
 
 </LinearLayout>
