--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,94 +5,55 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+    <EditText
+        android:id="@+id/Et_title"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/edit_backgound"
+        android:hint="    Here is Title"
+        android:singleLine="true" />
+
+
+    <EditText
+        android:layout_marginTop="10dp"
+        android:id="@+id/Et_content"
+        android:layout_width="match_parent"
+        android:layout_height="166dp"
+        android:background="@drawable/edit_backgound"
+        android:hint="    Here is Content"
+        android:lines="3"
+        android:maxLines="8" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="60dp"
+        <Button
+            android:id="@+id/Bt_add_data"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Title:" />
+            android:layout_weight="1"
+            android:text="@string/add_data"
+            android:textAllCaps="false"
+            android:textSize="16sp" />
 
-        <EditText
-            android:id="@+id/Et_title"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/Bt_search"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:singleLine="true" />
+            android:layout_weight="1"
+            android:text="@string/search"
+            android:textAllCaps="false"
+            android:textSize="16sp" />
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Content:" />
-
-        <EditText
-            android:id="@+id/Et_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:lines="3"
-            android:maxLines="8" />
-
-    </LinearLayout>
-
-
-<!--    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Date:" />
-
-        <EditText
-            android:id="@+id/Et_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="date"/>
-
-
-    </LinearLayout>-->
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <Button
-        android:id="@+id/Bt_add_data"
-        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="@string/add_data"
-        android:textAllCaps="false"
-        android:textSize="16sp" />
-
-    <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:id="@+id/Bt_search"
-        android:textAllCaps="false"
-        android:textSize="16sp"
-        android:text="@string/search"
-        />
-
-</LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:background="@drawable/edit_backgound">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/Rec_view"
@@ -100,7 +61,6 @@
             android:layout_height="match_parent">
 
         </android.support.v7.widget.RecyclerView>
-
 
 
     </LinearLayout>
